--- a/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.html
@@ -63,13 +63,13 @@
         <div class="card mb-3">
           <div class="card-body">
             <h3 class="card-title">{{ blog.nombre }}</h3>
-            <img [src]="transformUrl(blog.urlImagen)" class="card-img-top mx-auto d-block" alt="Imagen Opcional"> <!-- Agregamos las clases mx-auto d-block para centrar la imagen -->
+            <img [src]="transformUrl(blog.urlImagen)" class="card-img-top mx-auto d-block" alt="Imagen Opcional">
             <p class="card-text">{{ blog.comentario }}</p>
             <p class="card-date">{{ blog.fechaPublicacion | date:'dd/MM/yyyy' }}</p>
             <div class="button-container">
               <button class="btn btn-link" (click)="editBlog(blog)">Editar</button>
               <button class="btn-cancelar" (click)="deleteBlog(blog.identificador)">Eliminar</button>
-            </div>                       
+            </div><br>                      
             <div *ngIf="editingBlog && editingBlog.identificador === blog.identificador">
               <form (ngSubmit)="updateBlog()" #editBlogForm="ngForm">
                 <div class="form-group">
