--- a/sextoTrimestre/proyecto/src/app/components/sergio/asignar-ficha/asignar-ficha.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/asignar-ficha/asignar-ficha.component.html
@@ -1,26 +1,33 @@
-<p>asignar-ficha works!</p>
+<app-sidebar></app-sidebar>
 
-<p>Asignar Ficha</p>
+<div class="content">
+  <p class="section-title">Asignar Fichas</p>
 
-<div *ngIf="instructores && fichas">
-  <div>
-    <label for="instructorSelect">Selecciona un instructor:</label>
-    <select id="instructorSelect" [(ngModel)]="selectedInstructor">
-      <option *ngFor="let instructor of instructores" [value]="instructor.identificador">
-        {{ instructor.primerNombre }} {{ instructor.primerApellido }}
-      </option>
-    </select>
+  <div *ngIf="instructores && fichas" class="form-container">
+    <div class="form-group">
+      <label for="instructorSelect">Selecciona un instructor:</label>
+      <select id="instructorSelect" [(ngModel)]="selectedInstructor" class="custom-select">
+        <option *ngFor="let instructor of instructores" [value]="instructor.identificador">
+          {{ instructor.primerNombre }} {{ instructor.primerApellido }}
+        </option>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <label for="fichaSelect">Selecciona una ficha:</label>
+      <select id="fichaSelect" [(ngModel)]="selectedFicha" class="custom-select">
+        <option *ngFor="let ficha of fichas" [value]="ficha.identificador">
+          {{ ficha.numeroFicha }}
+        </option>
+      </select>
+    </div>
+
+    <button (click)="agregarFicha()" [disabled]="!selectedInstructor || !selectedFicha" class="custom-button">
+      Agregar Ficha
+    </button>
   </div>
+</div>
 
-  <div>
-    <label for="fichaSelect">Selecciona una ficha:</label>
-    <select id="fichaSelect" [(ngModel)]="selectedFicha">
-      <option *ngFor="let ficha of fichas" [value]="ficha.identificador">
-        {{ ficha.numeroFicha }}
-      </option>
-    </select>
-  </div>
-
-  <button (click)="agregarFicha()" [disabled]="!selectedInstructor || !selectedFicha">Agregar Ficha</button>
-
+<div *ngIf="asignacionExitosa" class="alert alert-success custom-alert">
+  Asignación correcta
 </div>
