--- a/sextoTrimestre/proyecto/src/app/components/sergio/asignar-ficha/asignar-ficha.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/asignar-ficha/asignar-ficha.component.html
@@ -28,6 +28,6 @@
   </div>
 </div>
 
-<div *ngIf="asignacionExitosa" class="alert alert-success custom-alert">
+<div *ngIf="asignacionExitosa" class="alert alert-success">
   Asignación correcta
 </div>
