--- a/sextoTrimestre/proyecto/src/app/components/sergio/asignar-ficha/asignar-ficha.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/asignar-ficha/asignar-ficha.component.scss
@@ -59,25 +59,22 @@ body {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
-.custom-alert {
-  background-color: #4caf50; /* Color de fondo verde */
-  color: #fff; /* Texto en color blanco */
-  padding: 20px; /* Espaciado interno */
-  margin: auto; /* Margen automático para centrar */
-  max-width: 600px; /* Ancho máximo del mensaje */
-  border-radius: 8px; /* Bordes redondeados */
-  text-align: center; /* Alineación del texto */
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Sombra suave */
-  transition: opacity 0.5s ease; /* Transición de opacidad */
-  font-size: 18px; /* Tamaño del texto */
-  position: fixed; /* Fijar la posición */
-  bottom: 5px; /* Alinear la parte inferior */
-  left: 50%; /* Alinear la izquierda al 50% de la pantalla */
-  transform: translateX(-50%); /* Centrar horizontalmente */
+.alert-container {
+  position: absolute;
+  bottom: 5px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1001;
+  width: 100%;
 }
 
-.custom-alert:hover {
-  opacity: 0.9; /* Opacidad reducida al pasar el ratón sobre el mensaje */
+.alert-success {
+  background-color: rgba(76, 175, 80, 0.7);
+  color: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  text-align: center;
+  max-width: 80%;
+  margin-top: 15px;
 }
-
-
