cambios al perfil, quite campos obligatorios, ya esta la barra de antiguedad de instructores

--- a/sextoTrimestre/proyecto/src/app/components/sergio/fichas-instructores/fichas-instructores.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/fichas-instructores/fichas-instructores.component.html
@@ -1,5 +1,16 @@
 <app-sidebar></app-sidebar>
-<h2>promedio instructores por ficha</h2>
-<div id="chart"></div>
 
-<h2>Antiguedad instructores</h2>
+
+<div class="chart-container">
+  <div class="graficoUno">
+    <h2>Cantidad de instructores por ficha</h2>
+    <div class="chart" id="chart"></div>
+  </div>
+
+  <div class="graficoDos">
+    <h2>Antiguedad instructores
+    </h2>
+    <div class="chart" id="bar-chart"></div>
+  </div>
+
+</div>
