--- a/sextoTrimestre/proyecto/src/app/components/sergio/fichas-instructores/fichas-instructores.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/fichas-instructores/fichas-instructores.component.html
@@ -3,13 +3,12 @@
 
 <div class="chart-container">
   <div class="graficoUno">
-    <h2>Cantidad de instructores por ficha</h2>
+    <h2 class="titulos">Cantidad de instructores por ficha</h2>
     <div class="chart" id="chart"></div>
   </div>
 
   <div class="graficoDos">
-    <h2>Antiguedad instructores
-    </h2>
+    <h2 class="titulos">Antiguedad instructores</h2>
     <div class="chart" id="bar-chart"></div>
   </div>
 
