--- a/sextoTrimestre/proyecto/src/app/components/sergio/fichas-instructores/fichas-instructores.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/fichas-instructores/fichas-instructores.component.scss
@@ -6,7 +6,7 @@ body {
 }
 
 .chart-container {
-  margin-top: 2%;
+  margin-top: 5%;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
@@ -17,7 +17,7 @@ body {
 .graficoDos {
   z-index: -1;
   text-align: center;
-  width: 45%;
+  width: 48%;
 }
 
 .chart {
@@ -27,17 +27,111 @@ body {
   margin: 10px;
 }
 
-.chart h2 {
+.titulos {
   margin-bottom: 15px;
-  font-size: 1.5em; /* Tamaño del texto del título */
-  color: #088a88; /* Color del texto del título */
+  font-size: 28px;
+  color: #088a88;
 }
 
 /* Añadir un poco de espacio alrededor del texto para un aspecto más limpio */
-.chart h2:before, .chart h2:after {
+.titulos::after {
   content: "";
   display: block;
   height: 1px;
   background-color: #ddd;
-  margin: 10px 0; /* Espacio alrededor del separador */
+  margin: 8px 0; /* Espacio alrededor del separador */
+}
+
+@media (max-width: 1200px) {
+  .graficoUno,
+  .graficoDos {
+    width: 60%; /* Ocupar el 100% del ancho en pantallas más pequeñas */
+  }
+}
+
+
+@media (max-width: 1000px) {
+  .graficoUno,
+  .graficoDos {
+    width: 75%; /* Ocupar el 100% del ancho en pantallas más pequeñas */
+    margin: 0 auto;
+  }
+
+  .chart-container {
+    justify-content: center;
+    flex-direction: column; /* Apilar los gráficos en pantallas más pequeñas */
+  }
+  .titulos {
+    margin-bottom: 15px;
+    font-size: 25px;
+    color: #088a88;
+  }
+}
+
+
+@media (max-width: 800px) {
+  .graficoUno,
+  .graficoDos {
+    width: 85%; /* Ocupar el 100% del ancho en pantallas más pequeñas */
+    margin: 0 auto;
+  }
+
+  .chart-container {
+    justify-content: center;
+    flex-direction: column; /* Apilar los gráficos en pantallas más pequeñas */
+  }
+  .titulos {
+    margin-bottom: 15px;
+    font-size: 20px;
+    color: #088a88;
+  }
+}
+
+@media (max-width: 625px) {
+  .graficoUno,
+  .graficoDos {
+    width: 100%; /* Ocupar el 100% del ancho en pantallas más pequeñas */
+    margin: 0 auto;
+  }
+
+  .chart-container {
+    justify-content: center;
+    flex-direction: column; /* Apilar los gráficos en pantallas más pequeñas */
+  }
+  .titulos {
+    margin-bottom: 15px;
+    font-size: 20px;
+    color: #088a88;
+  }
+}
+
+@media (max-width: 480px) {
+  .graficoUno,
+  .graficoDos {
+    width: 100%; /* Ocupar el 90% del ancho en pantallas más pequeñas */
+    margin: 0 auto; /* Centrar */
+  }
+
+  .chart-container {
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .chart h2 {
+    font-size: 18px; /* Tamaño de fuente más pequeño para títulos */
+  }
+}
+
+@media (min-width: 1800px) {
+  .graficoUno,
+  .graficoDos {
+    width: 38%; /* Limitar el ancho al 30% después de 1600px */
+  }
+  .chart-container {
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+
+  }
 }
