nuevos estilos a los botones en editar

--- a/sextoTrimestre/proyecto/src/app/components/sergio/edit-perfil/edit-perfil.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/edit-perfil/edit-perfil.component.html
@@ -19,7 +19,7 @@
       <label for="segundoApellido">Segundo Apellido:</label>
       <input type="text" id="segundoApellido" formControlName="segundoApellido" required>
 
-      <button type="submit" class="btn-primary" [disabled]="form.pristine">Guardar Cambios</button>
+      <button type="submit" [disabled]="form.pristine">Guardar Cambios</button>
     </form>
   </div>
 
