nuevos estilos a los botones y la tabla de modificar usuarios

--- a/sextoTrimestre/proyecto/src/app/components/sergio/asignar-ficha/asignar-ficha.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/asignar-ficha/asignar-ficha.component.html
@@ -22,7 +22,7 @@
       </select>
     </div>
 
-    <button (click)="agregarFicha()" [disabled]="!selectedInstructor || !selectedFicha" class="custom-button">
+    <button (click)="agregarFicha()" [disabled]="!selectedInstructor || !selectedFicha" class="boton">
       Agregar Ficha
     </button>
   </div>
