--- a/sextoTrimestre/proyecto/src/app/components/sergio/registros-admin/registros-admin.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/registros-admin/registros-admin.component.scss
@@ -24,7 +24,7 @@ input{
   font-size: 40px;
   margin: 30px 0;
   text-align: center;
-  color: #000;
+  color: #088a88;
 }
 
 .container_columns_form {
@@ -143,6 +143,10 @@ select {
     gap: 20px;
     padding: 5px;
     width: 100%;
+  }
+
+  .title_register{
+    font-size: 28px;
   }
 }
 
