--- a/sextoTrimestre/proyecto/src/app/components/sergio/modificar-usuarios/modificar-usuarios.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/modificar-usuarios/modificar-usuarios.component.scss
@@ -45,6 +45,11 @@
   background-color: #4d8a83;
 }
 
+.table-container{
+  width: 100%;
+  overflow-x: auto;
+}
+
 table {
   width: 90%;
   margin: 30px auto;
@@ -108,8 +113,9 @@ td i:hover {
 
 @media only screen and (max-width: 965px) {
   .filtro-container {
+    display: flex;
     flex-direction: column;
-    align-items: stretch;
+    justify-content: space-around;
   }
 
   .filtro-container input,
