--- a/sextoTrimestre/proyecto/src/app/components/sergio/update-password/update-password.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/update-password/update-password.component.html
@@ -17,6 +17,6 @@
       <label for="confirmarPassword">Confirmar contraseña:</label>
       <input type="password" id="confirmarPassword" formControlName="confirmarPassword" required>
 
-      <button (click)="cambiarContrasena()" class="custom-button">Cambiar Contraseña</button>
+      <button (click)="cambiarContrasena()">Cambiar Contraseña</button>
   </form>
 </div>
