--- a/sextoTrimestre/proyecto/src/app/components/sergio/update-password/update-password.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/update-password/update-password.component.scss
@@ -64,23 +64,39 @@ form input {
   width: 90%;
 }
 
-.btn-primary {
-  background-color: #57a7a5;
-  color: #fff;
+button {
+  position: relative;
+  font-size: 1.0em;
+  padding: 0.7em 1.4em;
+  background-color: #088a88;
+  text-decoration: none;
   border: none;
-  border-radius: 4px;
-  padding: 10px 20px;
-  cursor: pointer;
-  margin-right: 20px;
-  transition: background-color 0.3s ease;
+  border-radius: 0.5em;
+  color: white;
+  box-shadow: 0.3em 0.3em 0.3em rgba(0, 0, 0, 0.3);
 }
 
-.btn-primary:hover {
-  background-color: #088a88;
+button::before {
+  position: absolute;
+  content: '';
+  height: 0;
+  width: 0;
+  top: 0;
+  left: 0;
+  background: linear-gradient(135deg, rgba(8,138,136,1) 0%, rgba(8,138,136,1) 50%, rgb(243, 243, 243) 50%, rgba(87,167,165,1) 60%);
+  border-radius: 0 0 0.5em 0;
+  box-shadow: 0.2em 0.2em 0.2em rgba(0, 0, 0, 0.3);
+  transition: 0.3s;
 }
 
-.container .btn-primary:active {
-  background-color: #088a88;
+button:hover::before {
+  width: 1.6em;
+  height: 1.6em;
+}
+
+button:active {
+  box-shadow: 0.2em 0.2em 0.3em rgba(0, 0, 0, 0.3);
+  transform: translate(0.1em, 0.1em);
 }
 
 @media (max-width: 400px) {
