--- a/sextoTrimestre/proyecto/src/app/components/sergio/asignar-ficha/asignar-ficha.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/asignar-ficha/asignar-ficha.component.scss
@@ -4,7 +4,7 @@
 }
 
 .section-title {
-  font-size: 36px;
+  font-size: 30px;
   font-weight: bold;
   color: #088a88;
   text-align: center;
@@ -38,6 +38,7 @@
 }
 
 .boton {
+  z-index: -1;
   background-color: #088a88;
   padding: 1em 2em;
   border: none;
@@ -96,4 +97,10 @@
   text-align: center;
   max-width: 80%;
   margin-top: 15px;
+}
+
+@media (max-width: 500px) {
+.section-title{
+  font-size: 20px;
+}
 }
