--- a/sextoTrimestre/proyecto/src/app/components/sergio/update-password/update-password.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/update-password/update-password.component.scss
@@ -18,7 +18,8 @@ h2{
 }
 
 .custom-form-container {
-  width: 400px;
+  width: 490px;
+  height: 350px;
   margin: 50px auto;
   border: 1px solid #57a7a5;
   padding: 20px;
@@ -26,20 +27,6 @@ h2{
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   background-color: #fff;
 
-}
-
-.custom-button {
-  background-color: #088a88;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  padding: 10px 20px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.custom-button:hover {
-  background-color: #057d7d;
 }
 
 .edit-form-container {
@@ -65,6 +52,7 @@ form input {
 }
 
 button {
+  margin-top: 15px;
   position: relative;
   font-size: 1.0em;
   padding: 0.7em 1.4em;
