--- a/sextoTrimestre/proyecto/src/app/components/katalina/perfil-detalle/perfil-detalle.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/perfil-detalle/perfil-detalle.component.html
@@ -39,11 +39,11 @@
         </ul>
   </div>
 </nav>
-<h1 class="titulo">Tu perfil</h1>
 <div class="perfil-detalle">
   <div class="container">
     <img class="foto"  [src]="usuario.fotoPerfil" alt="Foto de perfil">
     <div id="perfil" class="information">
+      <p class="titulo">Tu perfil</p>
       <p class="font-weight-bold">Primer Nombre: <span id="primerNombre">{{ userData.primerNombre }}</span></p>
       <p class="font-weight-bold">Segundo Nombre: <span id="segundoNombre">{{ userData.segundoNombre }}</span></p>
       <p class="font-weight-bold">Primer Apellido: <span id="primerApellido">{{ userData.primerApellido }}</span></p>
