--- a/sextoTrimestre/proyecto/src/app/components/katalina/edit-perfil/edit-perfil.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/edit-perfil/edit-perfil.component.scss
@@ -6,11 +6,11 @@
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
-    max-width: 500px;
-    width: 80%;
+    max-width: 400px;
+    height: 430px;
     position: absolute;
-    top: 60%;
-    left: 50%;
+    top: 55%;
+    left: 30%;
     transform: translate(-50%, -50%);
     text-align: center;
   }
@@ -37,7 +37,13 @@
     text-align: center;
     color: #088a88;
   }
-
+  .imagen {
+    margin-top: 70px;
+    margin-left: 700px;
+    height: 450px;
+    width: 500px;
+    border-radius: 10px;
+  }
 /* Estilos Nav */
 nav{
   background-color: #008a88;
@@ -142,7 +148,7 @@ button {
 }
 
 .dropdown-button {
-    padding: 10px;
+    padding: 5px;
     font-size: 16px;
     border: none;
     background-color: #008a88;
