nuevo grafico, ya responsive

--- a/sextoTrimestre/proyecto/src/app/components/sergio/fichas-aprendices/fichas-aprendices.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/fichas-aprendices/fichas-aprendices.component.html
@@ -1,6 +1,13 @@
 <app-sidebar></app-sidebar>
-<div class="chart-container">
-  <div class="graficoUno">
-    <h2 class="titulos">Cantidad de aprendices por ficha</h2>
-    <div class="chart" id="chart"></div>
+  <div class="chart-container">
+    <div class="graficoUno">
+      <h2 class="titulos">Cantidad de aprendices por ficha</h2>
+      <div class="chart" id="chart"></div>
+    </div>
+
+    <div class="graficoDos">
+      <h2 class="titulos">Edades promedio aprendices</h2>
+      <div id="edadChart" class="chart-container"></div>
+    </div>
+
   </div>
