--- a/sextoTrimestre/proyecto/src/app/components/sergio/fichas-aprendices/fichas-aprendices.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/fichas-aprendices/fichas-aprendices.component.scss
@@ -1,3 +1,10 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto);
+
+body {
+  font-family: Roboto, sans-serif;
+  margin: 0;
+}
+
 .chart-container {
   margin-top: 5%;
   display: flex;
@@ -9,7 +16,7 @@
 .graficoUno,
 .graficoDos {
   text-align: center;
-  width: 48%;
+  width: 43%;
 }
 
 .chart {
