--- a/sextoTrimestre/proyecto/src/app/components/sergio/asignar-ficha/asignar-ficha.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/asignar-ficha/asignar-ficha.component.html
@@ -6,8 +6,15 @@
   <div *ngIf="instructores && fichas" class="form-container">
     <div class="form-group">
       <label for="instructorSelect">Selecciona un instructor:</label>
-      <select id="instructorSelect" [(ngModel)]="selectedInstructor" class="custom-select">
-        <option *ngFor="let instructor of instructores" [value]="instructor.identificador">
+      <select
+        id="instructorSelect"
+        [(ngModel)]="selectedInstructor"
+        class="custom-select"
+      >
+        <option
+          *ngFor="let instructor of instructores"
+          [value]="instructor.identificador"
+        >
           {{ instructor.primerNombre }} {{ instructor.primerApellido }}
         </option>
       </select>
@@ -15,19 +22,27 @@
 
     <div class="form-group">
       <label for="fichaSelect">Selecciona una ficha:</label>
-      <select id="fichaSelect" [(ngModel)]="selectedFicha" class="custom-select">
+      <select
+        id="fichaSelect"
+        [(ngModel)]="selectedFicha"
+        class="custom-select"
+      >
         <option *ngFor="let ficha of fichas" [value]="ficha.identificador">
           {{ ficha.numeroFicha }}
         </option>
       </select>
     </div>
 
-    <button (click)="agregarFicha()" [disabled]="!selectedInstructor || !selectedFicha" class="boton">
+    <button
+      (click)="agregarFicha()"
+      [disabled]="!selectedInstructor || !selectedFicha"
+      class="boton"
+    >
       Agregar Ficha
     </button>
-  </div>
-</div>
 
-<div *ngIf="asignacionExitosa" class="alert alert-success">
-  Asignación correcta
+    <div *ngIf="asignacionExitosa" class="alert alert-success">
+      Asignación correcta
+    </div>
+  </div>
 </div>
