--- a/sextoTrimestre/proyecto/src/app/components/sergio/asignar-ficha/asignar-ficha.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/asignar-ficha/asignar-ficha.component.scss
@@ -76,17 +76,6 @@
   width: 150%;
 }
 
-
-
-.alert-container {
-  position: absolute;
-  bottom: 5px;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 1001;
-  width: 100%;
-}
-
 .alert-success {
   background-color: rgba(76, 175, 80, 0.7);
   color: white;
@@ -94,9 +83,9 @@
   border-radius: 5px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   text-align: center;
-  max-width: 80%;
-  margin-top: 15px;
+  margin: 20px auto 0px;
 }
+
 
 @media (max-width: 500px) {
 .section-title{
