grafico de cantidad de blogs por instructor

--- a/sextoTrimestre/proyecto/src/app/components/sergio/fichas-instructores/fichas-instructores.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/fichas-instructores/fichas-instructores.component.html
@@ -12,4 +12,8 @@
     <div class="chart" id="bar-chart"></div>
   </div>
 
+  <div class="container">
+    <div id="blogsPorInstructorChart" class="chart-container"></div>
+  </div>
+
 </div>
