--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-horarios/ver-horarios.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-horarios/ver-horarios.component.html
@@ -41,7 +41,7 @@
 </nav>
 
 <h2 class="subtitulo mt-5">Horarios</h2>
-
+<!-- 
 <div class="noticias-container">
   <div *ngFor="let horario of newsList" class="instagram-div">
     <p class="date" style="font-size: 12px;">{{ horario.fecha | date:'dd/MM/yyyy'}}</p>
@@ -50,4 +50,4 @@
     <p class="card-text"><strong>Descripción:</strong>{{ horario.comentario }}</p>
     <button class="boton" (click)="descargarArchivo(horario.urlArchivo, horario.nombreArchivo)">Ver Archivo</button>
   </div>
-</div>
+</div> -->
