--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-asistencia/ver-asistencia.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-asistencia/ver-asistencia.component.html
@@ -39,7 +39,7 @@
         </ul>
   </div>
 </nav>
-  <h2 class="subtitulo mt-5" >Asistencias</h2>
+  <!-- <h2 class="subtitulo mt-5" >Asistencias</h2>
       <div class="container">
         <ul class="list-group">
           <li class="list-group-item" *ngFor="let asistencia of asistenciaList">
@@ -49,6 +49,4 @@
           </li>
         </ul>
       </div>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+   -->
